--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 </head>
 <body>
 	<h1>Insert Grades</h1>
-<form action="send.php" method="get">
+<form>
     Id:<input type="text" name ="id" id="id">
     Grades:<input type="text" name="grades" id="grades">
-    <input type="submit" name="submit" value="Submit"><br>
 </form>
-<button onclick="window.location.href='display.html';">Get Data</button>
+<button">Send Data</button>
+<button>Get Data</button>
 </body>
 </html>
