--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     Id:<input type="text" name ="id" id="id">
     Grades:<input type="text" name="grades" id="grades">
 </form>
-<button">Send Data</button>
-<button>Get Data</button>
+<button id="sendData">Send Data</button>
+<button id = "getData">Get Data</button>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+	$("#getData").click(function())
+	{
+		var id = $("#id").val*();
+		var grade = $("#grades").val();
+		$.ajax({
+			url: id + "/" + grade
+		})
+	}
+</script>
 </body>
 </html>
