--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     Grades:<input type="text" name="grades" id="grades">
 </form>
 <button id="sendData">Send Data</button>
-<button id = "getData">Get Data</button>
+<button id="getData">Get Data</button>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
-	$("#getData").click(function())
-	{
+	$("#getData").click(function()){
 		var id = $("#id").val*();
 		var grade = $("#grades").val();
 		$.ajax({
