--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
 	$("#getData").click(function(){
-		var id = $("#id").val*();
+		var id = $("#id").val();
 		var grade = $("#grades").val();
 		$.ajax({
 			url: id + "/" + grade
