--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
 		var id = $("#id").val();
 		var grade = $("#grades").val();
 		$.ajax({
-			url: id + "/" + grade
+			url: '/API/send.php',
+			type 'GET',
+			data: {'id': id, 'grades' : grade},
+			success: function(data,status)
+			{
+				if (status == "success")
+				{
+					alert("Grade Submitted");
+					$("#studentID").val("")
+					$("#grade").val("")
+				}
+			},
+			error: function(xhr, desc, err)
+			{
+				console.log(xhr);
+				console.log("Details: " + desc + "\nError:" + err);
+			}
 		});
 	});
 </script>
