--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
 <button id="getData">Get Data</button>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
-	$("#getData").click(function(){
-		var id = $("#id").val();
-		var grade = $("#grades").val();
-		$.ajax({
-			url: 'send.php',
-			type: 'get',
-			data: {'id': id, 'grades' : grade},
-			success: function(data,status)
+$("#getData").click(function(){
+
+	var id = $("#id").val();
+	var grade = $("#grades").val();
+	
+	$.ajax({
+		url: 'send.php',
+		type: 'post',
+		data: {'id': id, 'grades' : grade},
+		success: function(data,status)
+		{
+			if (status == "success")
 			{
-				if (status == "success")
-				{
-					alert("Grade Submitted");
-					$("#studentID").val("")
-					$("#grade").val("")
-				}
-			},
-			error: function(xhr, desc, err)
-			{
-				console.log(xhr);
-				console.log("Details: " + desc + "\nError:" + err);
+				alert("Grade Submitted");
+				$("#studentID").val("")
+				$("#grade").val("")
 			}
-		});
+		},
+		error: function(xhr, desc, err)
+		{
+			console.log(xhr);
+			console.log("Details: " + desc + "\nError:" + err);
+		}
 	});
+});
 </script>
 </body>
 </html>
