--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@ $("#sendData").click(function(){
 	var grade = $("#grades").val();
 	
 	$.ajax({
-		url: 'send.php/' + id + "/" + grade,
-		success: function(data,status)
-		{
-			if (status == "success")
-			{
-				alert("Grade Submitted");
-				$("#studentID").val("")
-				$("#grade").val("")
-			}
-		},
-		error: function(xhr, desc, err)
-		{
-			console.log(xhr);
-			console.log("Details: " + desc + "\nError:" + err);
-		}
+		
+		// url: 'send.php/' + id + "/" + grade,
+		// success: function(data,status)
+		// {
+		// 	if (status == "success")
+		// 	{
+		// 		alert("Grade Submitted");
+		// 		$("#studentID").val("")
+		// 		$("#grade").val("")
+		// 	}
+		// },
+		// error: function(xhr, desc, err)
+		// {
+		// 	console.log(xhr);
+		// 	console.log("Details: " + desc + "\nError:" + err);
+		// }
 	});
 });
 </script>
