--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@ $("#sendData").click(function(){
 	var grade = $("#grades").val();
 	
 	$.ajax({
-		
+		var xmlhttp = new XMLHttpRequest();
+        xmlhttp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+                document.getElementById("txtHint").innerHTML = this.responseText;
+            }
+        };
+        xmlhttp.open("GET", "send.php/" + id + "/" + grade, true);
+        xmlhttp.send();
+    }
 		// url: 'send.php/' + id + "/" + grade,
 		// success: function(data,status)
 		// {
