--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ $("#sendData").click(function(){
 	$.ajax({
 		url: 'send.php',
 		type: 'get',
-		data: {'id':id, 'grades' : grades},
+		data: {'id':id, 'grades' : grade},
 		success: function(data,status)
 		{
 			if (status == "success")
