--- a/index.html
+++ b/index.html
@@ -11,17 +11,37 @@
 </form>
 <button id="sendData">Send Data</button>
 <button id="getData">Get Data</button>
+<br>
+<br>
+<h1>Grade Viewer</h1>
+<div id = "gradeArea"></div>
+<hr>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
+$("#getData").click(function(){
+	$.ajax({
+		url:receive.php,
+		success: function(data, status)
+		{
+			if(status =="success")
+			{
+				$("gradeArea").html(data)
+			}
+		}
+		error: function(xhr, desc, err)
+		{
+			console.log(xhr);
+			console.log("Details: " + desc + "\nError:" + err);
+		}
+	})
+
 $("#sendData").click(function(){
 
 	var id = $("#id").val();
 	var grade = $("#grades").val();
 	
 	$.ajax({
-		url: 'send.php',
-		type: 'get',
-		data: {'id':id, 'grades' : grade},
+		url: 'send/' + id + "/" + grade,
 		success: function(data,status)
 		{
 			if (status == "success")
